tests/compile_failures/weird_size_combinebits.rs
use splitbits::*;

fn main() {
    let a: u8 = 0b0101_0101;
    combinebits!("aaa aaaa");
}
