tests/compile_failures/weird_size_combinebits.stderr
error: proc macro panicked
 --> tests/compile_failures/weird_size_combinebits.rs:5:5
  |
5 |     combinebits!("aaa aaaa");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Template width must be 8, 16, 32, 64, or 128, but was 7.
